crates/analyzer/tests/snapshots/errors__ambiguous_traits4.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: multiple applicable items in scope
   ┌─ compile_errors/ambiguous_traits4.fe:6:10
   │
 6 │   pub fn do() {
   │          ^^ candidate 1 is defined here on the struct
   ·
12 │   fn do() {
   │      ^^ candidate #2 is defined here on trait `DoThing`
   │
   = Hint: Rename one of the methods or make sure only one of them is in scope


